# hatch-mypyc

./: HISTORY.md  README.md  hatch.toml  pyproject.toml
.github/workflows/: build.yml  test.yml
hatch_mypyc/: __about__.py  hooks.py  plugin.py  utils.py
tests/: __init__.py  conftest.py  test_build.py  test_clean.py  test_config.py  test_utils.py  utils.py
