[build-system]
requires = ["hatchling>=1.7.1"]
build-backend = "hatchling.build"

[project]
name = "hatch-mypyc"
description = "Hatch build hook plugin for Mypyc"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "build",
  "hatch",
  "mypy",
  "mypyc",
  "plugin",
  "typing",
]
authors = [
  { name = "Ofek Lev", email = "oss@ofek.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Hatch",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "hatchling>=1.7.1",
  "mypy~=0.971",
  "packaging!=22.0",
  "pathspec",
  "setuptools",
]
dynamic = ["version"]

[project.urls]
Funding = "https://github.com/sponsors/ofek"
History = "https://github.com/ofek/hatch-mypyc/blob/master/HISTORY.md"
Issues = "https://github.com/ofek/hatch-mypyc/issues"
Source = "https://github.com/ofek/hatch-mypyc"

[project.entry-points.hatch]
mypyc = "hatch_mypyc.hooks"

[tool.hatch.version]
path = "hatch_mypyc/__about__.py"

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "FBT",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "T",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Ignore McCabe complexity
  "C901",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["hatch_mypyc"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use relative imports and assertions
"tests/**/*" = ["I252", "S101"]

[tool.mypy]
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true

[tool.coverage.run]
source_pkgs = ["hatch_mypyc", "tests"]
branch = true
parallel = true
omit = [
  "hatch_mypyc/__about__.py",
]

[tool.coverage.paths]
hatch_mypyc = ["hatch_mypyc", "*/hatch-mypyc/hatch_mypyc"]
tests = ["tests", "*/hatch-mypyc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
